Add title tag to various images

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -7,7 +7,7 @@
 {% if object.image %}
 <div class="text-center">
   <figure class="figure img-thumbnail">
-    <img src="{{ object.image.url }}" class="figure-img img-fluid rounded" alt="{{ object }}">
+    <img src="{{ object.image.url }}" class="figure-img img-fluid rounded" alt="{{ object }}" title="{{ object }}">
     <figcaption class="figure-caption text-center">{{ object }}{% if object.image_attribution %} by
       {% if object.image_attribution_url %}<a
         href="{{ object.image_attribution_url}}">{{ object.image_attribution }}</a>{% else %}{{ object.image_attribution }}{% endif %}{% endif %}
