--- a/schema/templates/detail.html
+++ b/schema/templates/detail.html
@@ -5,7 +5,7 @@
 
 {% block subheading %}<h4><a href="{{ object.get_absolute_url }}">{{ object }}</a><a
             href="{{ object.get_absolute_url }}/update"><img src="{% static "svg/edit.svg" %}" width="20" height="20"
-                  alt="Edit"></a></h4>{%endblock%}
+                  alt="Edit" title="Edit"></a></h4>{%endblock%}
 
 {% block content %}{%endblock%}
 
