--- a/schema/templates/schema/teleconvertermodel_detail.html
+++ b/schema/templates/schema/teleconvertermodel_detail.html
@@ -3,6 +3,18 @@
 {% load boolicontag %}
 
 {% block content %}
+{% if object.image %}
+<div class="text-center">
+  <figure class="figure img-thumbnail">
+    <img src="{{ object.image.url }}" class="figure-img img-fluid rounded" alt="{{ object }}" title="{{ object }}">
+    <figcaption class="figure-caption text-center">{{ object }}{% if object.image_attribution %} by
+      {% if object.image_attribution_url %}<a
+        href="{{ object.image_attribution_url}}">{{ object.image_attribution }}</a>{% else %}{{ object.image_attribution }}{% endif %}{% endif %}
+    </figcaption>
+  </figure>
+</div>
+{% endif %}
+
 <table class="table table-hover">
   <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
       href="#">Summary</a></th>
@@ -15,7 +27,11 @@
     <td>Model</td>
     <td>{{ object.model }}</td>
   </tr>
-  {% if object.manufacturer is not None %}
+  {% if object.disambiguation %}
+  <tr>
+    <td>Disambiguation</td>
+    <td>{{ object.disambiguation }}</td>
+  </tr>
   {% endif %}
   {% if object.mount is not None %}
   <tr>
