--- a/schema/templates/schema/scan_detail.html
+++ b/schema/templates/schema/scan_detail.html
@@ -6,7 +6,7 @@
   {% if object.negative is not None %}
   <tr>
     <td>Negative</td>
-    <td><a href="{% url 'schema:negative-detail' object.negative.id_owner %}">{{ object.negative }}</a></td>
+    <td><a href="{% url 'schema:negative-detail' object.negative.slug %}">{{ object.negative }}</a></td>
   </tr>
   {% endif %}
   {% if object.print is not None %}
