Update docker repo references

--- a/help/templates/about.html
+++ b/help/templates/about.html
@@ -72,12 +72,14 @@
 
 <p>If you get stuck with CameraHub, informal support is available by messaging <a
         href="https://www.facebook.com/camerahubapp/">CameraHub on Facebook</a>, or by sending an email to <a
-        href="mailto:support@camerahub.info">support@camerahub.info</a>. If you think you've found a bug in CameraHub, or if you want to suggest a new feature, you can <a href="https://github.com/djjudas21/camerahub/issues">log an issue on Github</a>.</p>
+        href="mailto:support@camerahub.info">support@camerahub.info</a>. If you think you've found a bug in CameraHub,
+        or if you want to suggest a new feature, you can <a href="https://github.com/camerahub/camerahub/issues">log
+        an issue on Github</a>.</p>
 
 <h2>Roadmap</h2>
 
 <p>CameraHub is an evolving project. For a detailed look at current bugs and feature requests, check out the <a
-        href="https://github.com/djjudas21/camerahub/issues">issue tracker</a>. Anyone can report bugs, request features
+        href="https://github.com/camerahub/camerahub/issues">issue tracker</a>. Anyone can report bugs, request features
     and contribute code.</p>
 
 {% endblock %}
