--- a/schema/templates/footer.html
+++ b/schema/templates/footer.html
@@ -4,7 +4,7 @@
 <p align="center">
         <a href="https://www.facebook.com/camerahubapp" target="_blank"><img src="{% static "svg/facebook.svg" %}"
                         width="30" height="30" alt="Facebook" title="Facebook"></a>
-        <a href="https://github.com/djjudas21/camerahub" target="_blank"><img src="{% static "svg/github.svg" %}"
+        <a href="https://github.com/camerahub/camerahub" target="_blank"><img src="{% static "svg/github.svg" %}"
                         width="30" height="30" alt="Github" title="Github"></a>
         <a href="mailto:support@camerahub.info"><img src="{% static "svg/mail.svg" %}" width="30" height="30"
                         alt="Mail"></a>
