--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load boolicontag %}
 {% load formatting %}
+{% load ratings %}
 
 {% block content %}
 {% if object.image %}
@@ -496,6 +497,10 @@
   <tr>
     <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
         href="#meta">Meta</a></th>
+  </tr>
+  <tr>
+    <td>Rating</td>
+    <td>{% ratings object %}</td>
   </tr>
   {% if object.tags.all %}
   <tr>
