--- a/schema/templates/schema/enlargermodel_detail.html
+++ b/schema/templates/schema/enlargermodel_detail.html
@@ -1,6 +1,7 @@
 {% extends "detail.html" %}
 {% load static %}
 {% load formatting %}
+{% load ratings %}
 
 {% block content %}
 {% if object.image %}
@@ -68,6 +69,10 @@
   <tr>
     <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
         href="#meta">Meta</a></th>
+  </tr>
+  <tr>
+    <td>Rating</td>
+    <td>{% ratings object %}</td>
   </tr>
   {% if object.tags.all %}
   <tr>
