--- a/schema/templates/schema/enlargermodel_detail.html
+++ b/schema/templates/schema/enlargermodel_detail.html
@@ -9,8 +9,8 @@
   <figure class="figure img-thumbnail">
     <img src="{{ object.image.url }}" class="figure-img img-fluid rounded" alt="{{ object }}" title="{{ object }}">
     <figcaption class="figure-caption text-center">{{ object }}{% if object.image_attribution %} by
-      {% if object.image_attribution_url %}<a
-        href="{{ object.image_attribution_url}}">{{ object.image_attribution }}</a>{% else %}{{ object.image_attribution }}{% endif %}{% endif %}
+      {% if object.image_attribution_link %}<a
+        href="{{ object.image_attribution_link }}">{{ object.image_attribution }}</a>{% else %}{{ object.image_attribution }}{% endif %}{% endif %}
     </figcaption>
   </figure>
 </div>
