Link the version string to the release notes on Github

--- a/schema/templates/footer.html
+++ b/schema/templates/footer.html
@@ -7,9 +7,10 @@
         <a href="https://github.com/camerahub/camerahub" target="_blank"><img src="{% static "svg/github.svg" %}"
                         width="30" height="30" alt="Github" title="Github"></a>
         <a href="mailto:support@camerahub.info"><img src="{% static "svg/mail.svg" %}" width="30" height="30"
-                        alt="Mail"></a>
+                        alt="Mail" title="Mail"></a>
         <a href="https://icons8.com/icons" target="_blank"><img src="{% static "svg/icons8.svg" %}" width="30"
                         height="30" alt="Icons8" title="Icons8"></a>
         <br>
-        <small>CameraHub v{% camerahub_version %}</small>
+        <small>CameraHub <a href="https://github.com/camerahub/camerahub/releases/tag/{% camerahub_version %}" target="_blank"
+                        title="Release notes">v{% camerahub_version %}</a></small>
 </p>
