Format print sizes with inches

--- a/schema/templates/schema/print_detail.html
+++ b/schema/templates/schema/print_detail.html
@@ -29,7 +29,7 @@
   {% if object.width is not None and object.height is not None %}
   <tr>
     <td>Size</td>
-    <td>{{ object.width }} &times; {{ object.height }}</td>
+    <td>{{ object.width }} &times; {{ object.height }}"</td>
   </tr>
   {% endif %}
   {% if object.fine is not None %}
