WIP to make a templatetag to render help text

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -3,6 +3,7 @@
 {% load boolicontag %}
 {% load formatting %}
 {% load ratings %}
+{% load td %}
 
 {% block content %}
 {% if object.image %}
@@ -24,7 +25,7 @@
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
-    <td>Manufacturer</td>
+    <td>{% td object.manufacturer %}</td>
     <td>{% include "manufacturer.html" with manufacturer=object.manufacturer %}</td>
   </tr>
   {% endif %}
