Add workflow and API docs

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -75,6 +75,8 @@
                     <a class="dropdown-item" href="{% url 'help:concepts' %}">Concepts</a>
                     <a class="dropdown-item" href="{% url 'help:faq' %}">FAQs</a>
                     <a class="dropdown-item" href="{% url 'help:condition-list' %}">Condition grading</a>
+                    <a class="dropdown-item" href="{% url 'help:camera-workflow' %}">Camera collecting workflow</a>
+                    <a class="dropdown-item" href="{% url 'help:film-workflow' %}">Film shooting workflow</a>
                     <a class="dropdown-item" href="{% url 'schema:stats' %}">Public stats</a>
                 </div>
             </li>
