Use correct HTML symbol

--- a/schema/templates/index.html
+++ b/schema/templates/index.html
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="col-sm-9">
             <h1 class="display-4">Welcome to CameraHub</h1>
-            <p class="lead">an app for cataloguing vintage cameras, lenses, films, negatives & prints</p>
+            <p class="lead">an app for cataloguing vintage cameras, lenses, films, negatives &amp; prints</p>
         </div>
         <div class="col-sm-3">
             <img src="{% static "svg/camera.svg" %}" class="float-right img-fluid" style="max-width:128px"
