--- a/schema/templates/index.html
+++ b/schema/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load cache %}
 
 {% block heading %}<h4>
     <img src="{% static "svg/home.svg" %}" width="30" height="30" alt="Home">
@@ -32,6 +33,8 @@
             class="btn btn-primary btn-sm" href="{% url 'django_registration_register' %}" role="button">Register</a> to
         start tracking private data about your own collection.
         {% endif %}
+
+{% cache 600 index %}
         Get started using the icons below, or use the menus above.</p>
     <div class="card-deck">
         <div class="card">
@@ -62,5 +65,6 @@
             </div>
         </div>
     </div>
+{% endcache %}
 </div>
 {% endblock %}
