--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -1,4 +1,7 @@
+{% load cache %}
 {% load static %}
+
+{% cache 600 navpublic %}
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3498db;">
     <a class="navbar-brand" href="{% url 'schema:index' %}">
         <h4>CameraHub</h4>
@@ -36,6 +39,7 @@
                     <a class="dropdown-item" href="{% url 'schema:toner-list' %}">Toners</a>
                 </div>
             </li>
+{% endcache %}
 
             {% if user.is_authenticated %}
             <li class="nav-item active dropdown">
@@ -64,6 +68,7 @@
             </li>
             {% endif %}
 
+{% cache 600 navhelp %}
             <li class="nav-item active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="helpnavbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
@@ -78,6 +83,7 @@
                     <a class="dropdown-item" href="{% url 'schema:stats' %}">Public stats</a>
                 </div>
             </li>
+{% endcache %}
 
             {% if user.is_authenticated %}
             <li class="nav-item active dropdown">
