--- a/schema/templates/tag-list.html
+++ b/schema/templates/tag-list.html
@@ -10,7 +10,7 @@
 {% if object_list %}
 <h5>All tags</h5>
 {% for tag in object_list %}
-<a class="btn btn-outline-primary" href="{% url 'schema:tag-detail' tag|lower %}" role="button">{{ tag }}</a>
+<a class="btn btn-outline-primary" href="{% url 'schema:tag-detail' tag.slug %}" role="button">{{ tag.slug }}</a>
 {% endfor %}
 {% else %}
 <p>No tags defined yet</p>
