--- a/schema/templates/schema/teleconverter_detail.html
+++ b/schema/templates/schema/teleconverter_detail.html
@@ -52,5 +52,11 @@
     <td>{{ object.lost_price }}</td>
   </tr>
   {% endif %}
+  {% if object.profit is not None %}
+  <tr>
+    <td>Profit</td>
+    <td>{{ object.profit }}</td>
+  </tr>
+  {% endif %}
 </table>
 {% endblock %}
