--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -81,6 +81,7 @@
                     <a class="dropdown-item" href="{% url 'help:faq' %}">FAQs</a>
                     <a class="dropdown-item" href="{% url 'help:condition-list' %}">Condition grading</a>
                     <a class="dropdown-item" href="{% url 'schema:stats' %}">Public stats</a>
+                    {% if settings.STATUS_URL %}<a class="dropdown-item" href="{{ settings.STATUS_URL }}">Site status</a>{% endif %}
                 </div>
             </li>
 {% endcache %}
