--- a/schema/templates/base.html
+++ b/schema/templates/base.html
@@ -13,6 +13,9 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% include "favicon.html" %}
+    {% for asset in assets.values %}
+        {{ asset }}
+    {% endfor %}
 </head>
 
 <body>
