--- a/schema/templates/schema/print_print.html
+++ b/schema/templates/schema/print_print.html
@@ -1,17 +1,14 @@
-{% extends "detail.html" %}
-{% load static %}
-{% load boolicontag %}
+{% extends "print.html" %}
 
 {% block content %}
-<table class="table table-hover">
+<table border="1">
   <tr>
-    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
-        href="#">Summary</a></th>
+    <th colspan="2">Summary</th>
   </tr>
   {% if object.negative is not None %}
   <tr>
     <td>Negative</td>
-    <td><a href="{% url 'schema:negative-detail' object.negative.slug %}">{{ object.negative }}</a></td>
+    <td>{{ object.negative }}</td>
   </tr>
   {% endif %}
   {% if object.date is not None %}
@@ -23,7 +20,7 @@
   {% if object.paper_stock is not None %}
   <tr>
     <td>Paperstock</td>
-    <td><a href="{% url 'schema:paperstock-detail' object.paper_stock.id %}">{{ object.paper_stock }}</a></td>
+    <td>{{ object.paper_stock }}</td>
   </tr>
   {% endif %}
   {% if object.width is not None and object.height is not None %}
@@ -35,24 +32,23 @@
   {% if object.fine is not None %}
   <tr>
     <td>Fine</td>
-    <td>{{ object.fine|boolicontag }}</td>
+    <td>{{ object.fine }}</td>
   </tr>
   {% endif %}
 
   <tr>
-    <th colspan="2" id="exposure"><img src="{% static "svg/enlarger.svg" %}" width="30" height="30" alt="Exposure"> <a
-        href="#exposure">Exposure</a></th>
+    <th colspan="2">Exposure</th>
   </tr>
   {% if object.enlarger is not None %}
   <tr>
     <td>Enlarger</td>
-    <td><a href="{% url 'schema:enlarger-detail' object.enlarger.id %}">{{ object.enlarger }}</a></td>
+    <td>{{ object.enlarger }}</td>
   </tr>
   {% endif %}
   {% if object.lens is not None %}
   <tr>
     <td>Enlarger lens</td>
-    <td><a href="{% url 'schema:lens-detail' object.lens.id %}">{{ object.lens }}</a></td>
+    <td>{{ object.lens }}</td>
   </tr>
   {% endif %}
   {% if object.aperture is not None %}
@@ -75,13 +71,12 @@
   {% endif %}
 
   <tr>
-    <th colspan="2" id="development"><img src="{% static "svg/developer.svg" %}" width="30" height="30"
-        alt="Development"> <a href="#development">Development</a></th>
+    <th colspan="2">Development</th>
   </tr>
   {% if object.developer is not None %}
   <tr>
     <td>Developer</td>
-    <td><a href="{% url 'schema:developer-detail' object.developer.slug %}">{{ object.developer }}</a></td>
+    <td>{{ object.developer }}</td>
   </tr>
   {% endif %}
   {% if object.development_time is not None %}
@@ -96,7 +91,7 @@
     <td>
       <ul class="list-inline">
         {% for toner in object.toner.all %}
-        <li class="list-inline-item"><a href="{% url 'schema:toner-detail' toner.slug %}">{{ toner }}</a></li>
+        <li class="list-inline-item">{{ toner }}</li>
         {% endfor %}</ul>
     </td>
   </tr>
@@ -116,13 +111,12 @@
   {% endif %}
 
   <tr>
-    <th colspan="2" id="ownership"><img src="{% static "svg/ownership.svg" %}" width="30" height="30"
-        alt="Ownership">&nbsp;<a href="#ownership">Ownership</a></th>
+    <th colspan="2">Ownership</th>
   </tr>
   {% if object.own is not None %}
   <tr>
     <td>Own</td>
-    <td>{{ object.own|boolicontag }}</td>
+    <td>{{ object.own }}</td>
   </tr>
   {% endif %}
   {% if object.location is not None %}
@@ -140,15 +134,8 @@
   {% if object.archive is not None %}
   <tr>
     <td>Archive</td>
-    <td><a href="{% url 'schema:archive-detail' object.archive.id_owner %}">{{ object.archive }}</a></td>
+    <td>{{ object.archive }}</td>
   </tr>
   {% endif %}
 </table>
-{% endblock %}
-
-{% block moreactions %}
-{% if object.archive is None %}<li><a class="btn btn-primary" href="{% url 'schema:print-archive' object.id_owner %}"
-    role="button">Archive this print</a></li>{% endif %}
-<li><a class="btn btn-primary" href="{% url 'schema:print-print' object.id_owner %}"
-    target="_blank" role="button">Print a cover sheet</a></li>
 {% endblock %}
