Add support for person types

--- a/schema/templates/schema/person_detail.html
+++ b/schema/templates/schema/person_detail.html
@@ -6,5 +6,9 @@
     <td>Name</td>
     <td>{{ object.name }}</td>
   </tr>
+  <tr>
+    <td>Type</td>
+    <td>{{ object.type }}</td>
+  </tr>
 </table>
 {% endblock %}
