Rip out sphinxdoc

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -76,7 +76,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="helpnavbarDropdown">
 
-                    <a class="dropdown-item" href="{% url 'docs-list' %}">Docs</a>
+                    <a class="dropdown-item" href="https://github.com/camerahub/camerahub/tree/master/docs">Docs</a>
                     <a class="dropdown-item" href="{% url 'schema:stats' %}">Public stats</a>
                     {% if settings.STATUS_URL %}<a class="dropdown-item" href="{{ settings.STATUS_URL }}">Site status</a>{% endif %}
                 </div>
