Add a button to sell prints

--- a/schema/templates/schema/print_detail.html
+++ b/schema/templates/schema/print_detail.html
@@ -147,8 +147,10 @@
 {% endblock %}
 
 {% block moreactions %}
-{% if object.archive is None %}<li><a class="btn btn-primary" href="{% url 'schema:print-archive' object.id_owner %}"
+{% if object.own is True %}{% if object.archive is None %}<li><a class="btn btn-primary" href="{% url 'schema:print-archive' object.id_owner %}"
     role="button">Archive this print</a></li>{% endif %}
+    <li><a class="btn btn-primary" href="{% url 'schema:print-sell' object.id_owner %}"
+      role="button">Sell this print</a></li>{% endif %}
 <li><a class="btn btn-primary" href="{% url 'schema:print-print' object.id_owner %}"
     target="_blank" role="button">Print a cover sheet</a></li>
 {% endblock %}
