--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -57,13 +57,13 @@
     <td><a href="{% url 'schema:negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a></td>
   </tr>
   {% endif %}
-
-
+  {% if object.interchangeable_lens is not False %}
   {% if object.mount is not None %}
   <tr>
     <td>Mount</td>
     <td><a href="{% url 'schema:mount-detail' object.mount.slug %}">{{ object.mount }}</a></td>
   </tr>
+  {% endif %}
   {% else %}
   <tr>
     <td>Lens</td>
