--- a/ui/templates/django_registration/registration_complete.html
+++ b/ui/templates/django_registration/registration_complete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "iommi_base.html" %}
 {% load static %}
 
 {% block heading %}
@@ -8,5 +8,5 @@
 {% endblock %}
 
 {% block content %}
-<p>Your account is now activated. <a href="{% url 'login' %}">Log in</a> now.</p>
+<p>Thank you for registering on CameraHub. Please check your inbox for an email to activate your account.</p>
 {% endblock %}
