--- a/ui/templates/registration/password_change_done.html
+++ b/ui/templates/registration/password_change_done.html
@@ -1,12 +1,13 @@
-{% extends 'base.html' %}
+{% extends "iommi_base.html" %}
 {% load static %}
 
 {% block heading %}
 <h4>
   <img src="{% static "svg/password.svg" %}" width="30" height="30" alt="Login">
-  Password reset</h4>
+  Change password</h4>
 {% endblock %}
 
+
 {% block content %}
-<p>Your new password has been set. <a href="{% url 'login' %}">Log in</a> now.</p>
+<p>Your password has been changed</p>
 {% endblock %}
