--- a/ui/templates/registration/password_reset_complete.html
+++ b/ui/templates/registration/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'iommi_base.html' %}
 {% load static %}
 
 {% block heading %}
@@ -8,5 +8,5 @@
 {% endblock %}
 
 {% block content %}
-<p>We've emailed you a link to reset your password. Check your inbox.</p>
+<p>Your new password has been set. <a href="{% url 'login' %}">Log in</a> now.</p>
 {% endblock %}
