--- a/ui/templates/registration/password_reset_confirm.html
+++ b/ui/templates/registration/password_reset_confirm.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% load crispy_forms_tags %}
+{% extends 'iommi_base.html' %}
 {% load static %}
 
 {% block heading %}
@@ -13,7 +12,7 @@
 
 <form method="POST">
   {% csrf_token %}
-  {{ form|crispy }}
+  {{ form }}
   <input type="submit" value="Change my password">
 </form>
 
