--- a/ui/templates/django_registration/activation_failed.html
+++ b/ui/templates/django_registration/activation_failed.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "iommi_base.html" %}
 {% load static %}
 
 {% block heading %}
@@ -8,5 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<p>Thank you for registering on CameraHub. Please check your inbox for an email to activate your account.</p>
+
+<p>Account activation failed</p>
+
 {% endblock %}
