--- a/ui/templates/registration/password_change_form.html
+++ b/ui/templates/registration/password_change_form.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% load crispy_forms_tags %}
+{% extends "iommi_base.html" %}
 {% load static %}
 
 {% block heading %}
@@ -12,7 +11,7 @@
 <p>Fill in the details below to change your password</p>
 <form method="post">
   {% csrf_token %}
-  {{ form|crispy }}
+  {{ form }}
 
   <input type="submit" value="Submit">
 </form>
