--- a/ui/templates/registration/password_reset_done.html
+++ b/ui/templates/registration/password_reset_done.html
@@ -1,13 +1,12 @@
-{% extends "base.html" %}
+{% extends 'iommi_base.html' %}
 {% load static %}
 
 {% block heading %}
 <h4>
   <img src="{% static "svg/password.svg" %}" width="30" height="30" alt="Login">
-  Change password</h4>
+  Password reset</h4>
 {% endblock %}
 
-
 {% block content %}
-<p>Your password has been changed</p>
+<p>We've emailed you a link to reset your password. Check your inbox.</p>
 {% endblock %}
